fix(master):添加 信号检测 按钮点击变色效果

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="text_instruction">注册意味着你同意</string>
     <string name="text_choose_register">还可以选择一下注册方式</string>
     <string name="action_edit">编辑</string>
+
+    <drawable name="clr_normal">#6eba85</drawable>
+    <drawable name="clr_pressed">#0013a4</drawable>
 </resources>
